--- a/index.htm
+++ b/index.htm
@@ -180,12 +180,12 @@ HVAC.COM
 </div>
 </div>
 <p class="text-gray-600 mb-4">2024 — Present | Charlotte, NC</p>
-<p class="text-gray-700 mb-4">Responsible for developing and optimizing lead generation tools that drive conversions to HVAC.com's paid services. Collaborating closely with marketing, engineering, and design teams, I lead efforts that enhance customer engagement and drive measurable results:</p>
+<p class="text-gray-700 mb-4">Led development of lead generation tools that boosted conversions to HVAC.com’s paid services. Collaborating closely with marketing, engineering, and design teams, I lead efforts that increase homeowner engagement and drive measurable results:</p>
 <ul class="list-disc list-inside text-gray-700 space-y-2 mb-4">
 <li><span class="font-semibold">Calculators:</span> Built and launched a suite of calculators, increasing the conversion rate to our paid product from <strong>0.1%</strong> to <strong>7.3%</strong>.</li>
-<li><span class="font-semibold">QuoteScore:</span> A tool that helps homeowners understand their HVAC quotes, converting at a <strong>6%</strong> rate to our paid offering.</li>
-<li><span class="font-semibold">Video Content:</span> Homeowners who engage with video content convert to paid products at a <strong>3.4%</strong> rate.</li>
-<li><span class="font-semibold">Landing Pages:</span> Optimized landing pages to achieve a <strong>2.3%</strong> conversion rate to paid products.</li>
+<li><span class="font-semibold">QuoteScore:</span> A tool that helps homeowners understand their HVAC quotes, converting at a <strong>6% rate</strong> to our paid offering.</li>
+<li><span class="font-semibold">Video Content:</span> Homeowners who engage with video content convert to paid products at a <strong>3.4% rate</strong>.</li>
+<li><span class="font-semibold">Landing Pages:</span> Optimized landing pages to achieve a <strong>2.3% conversion rate</strong> to paid products.</li>
 </ul>
 <div class="grid grid-cols-2 md:grid-cols-4 gap-4 mt-4">
 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Calculators-ugatTWPQjMXKJgaVhpaFvInZcvUTnG.png" alt="HVAC.COM Calculators" class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
@@ -213,7 +213,7 @@ HURD AI
 <p class="text-gray-600  mb-4">2023  | Berkeley, CA</p>
 <ul class="list-disc list-inside  text-gray-700 space-y-2 mb-4">
 <li>Led the development of AI-powered educational tools: a Mac app and a web-based chatbot.</li>
-<li>Drove <strong>700%</strong> user growth post launch.</li>
+<li>Drove <strong>700% user growth</strong> post-launch.</li>
 <li>Versatility in roles, including Strategy, Marketing, Support, User Research, and Quality Assurance, crucial in the successful launch and growth of Hurd AI.</li>
 </ul>
 <div class="grid grid-cols-2 md:grid-cols-4 gap-4 mt-4">
@@ -242,9 +242,9 @@ LEVER
 <p class="text-gray-600 mb-4">2021 — 2023 | San Francisco, CA</p>
 <p class="text-gray-700 mb-4">Created and drove the HRIS Sync product area from inception to launch, developing key API endpoints to synchronize Human Resources Information Systems (HRIS) and Lever. Launched features that improved user profiles and enabled org chart aware proxy approval for requisitions, postings, and offers.</p>
 <ul class="list-disc list-inside text-gray-700 space-y-2 mb-4">
-<li><span class="font-semibold">HRIS Sync Creation &amp; Launch:</span> Created and led the HRIS Sync product area and 7-member team. Achieved a <strong>37%</strong> product engagement rate in the first quarter and drove improvements in Time to Hire and Time to Fill metrics.</li>
+<li><span class="font-semibold">HRIS Sync Creation &amp; Launch:</span> Created and led the HRIS Sync product area and 7-member team. Achieved a <strong>37% product engagement rate</strong> in the first quarter and drove improvements in Time to Hire and Time to Fill metrics.</li>
 <li><span class="font-semibold">End-to-End Product Discovery:</span> Conducted extensive user research and quantitative/qualitative analysis to capture and prioritize customer feedback, ensuring product innovations aligned with company objectives.</li>
-<li><span class="font-semibold">Bulk Candidate Importer:</span> A self-serve drag-and-drop interface for bulk candidate importing, reducing upload times from days to minutes, freeing up support and implementation teams, and improving user experience.</li>
+<li><span class="font-semibold">Bulk Candidate Importer:</span> A self-serve drag-and-drop interface for bulk candidate importing, reducing upload times from <strong>days to minutes</strong>, freeing up support and implementation teams, and improving user experience.</li>
 <li><span class="font-semibold">Cross-Functional Collaboration:</span> Collaborated closely with professional services, implementation, customer success, and support teams to integrate both internal and customer feedback into the product development process.</li>
 </ul>
 <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-4">
@@ -271,9 +271,9 @@ SENDOSO
 <p class="text-gray-600 mb-4">2021 | San Francisco, CA</p>
 <p class="text-gray-700 mb-4">Championed the global expansion of Sendoso's eGift platform, driving strategic partnerships and market entry initiatives to increase international and domestic growth. Delivered key features and improvements that enhanced security, performance, and customer satisfaction:</p>
 <ul class="list-disc list-inside text-gray-700 space-y-2 mb-4">
-<li><span class="font-semibold">eGift Platform Expansion:</span> Drove <strong>23%</strong> U.S. and <strong>67%</strong> international growth by strengthening existing vendor relationships and upgrading Sendoso's eGift platform to allow a single gift card to be mapped to multiple countries, significantly expanding reach.</li>
+<li><span class="font-semibold">eGift Platform Expansion:</span> Drove <strong>23% U.S.</strong> and <strong>67% international growth</strong> by strengthening existing vendor relationships and upgrading Sendoso's eGift platform to allow a single gift card to be mapped to multiple countries, significantly expanding reach.</li>
 <li><span class="font-semibold">Square Partnership:</span> Partnered with Square to enable local eGifting in the U.S., Canada, Australia, and the U.K.</li>
-<li><span class="font-semibold">Fraud Prevention:</span> Prevented fraud worth hundreds of thousands of dollars by implementing two-factor authentication and AI-driven fraud detection, enhancing platform security and improving customer trust.</li>
+<li><span class="font-semibold">Fraud Prevention:</span> Prevented fraud worth <strong>hundreds of thousands of dollars</strong> by implementing two-factor authentication and AI-driven fraud detection, enhancing platform security and improving customer trust.</li>
 <li><span class="font-semibold">Platform Revenue Drivers:</span> Launched feature tiering capability and user onboarding improvements, contributing to revenue growth and improved customer experience.</li>
 <li><span class="font-semibold">Operational Efficiency:</span> Enhanced internal tools to simplify eGift deactivation and refund processes, enabling Support to resolve issues without Engineering intervention, leading to faster issue resolution.</li>
 </ul>
@@ -310,8 +310,8 @@ ROCKET LAWYER
 <p class="text-gray-600 mb-4">2018 — 2021 | San Francisco, CA</p>
 <p class="text-gray-700 mb-4">Developed and executed product strategies for Rocket Lawyer's Platform and Legal Documentation teams, driving innovation and growth. Collaborated closely with cross-functional teams and C-suite leadership to create and guide initiatives, develop and maintain product roadmaps.</p>
 <ul class="list-disc list-inside text-gray-700 space-y-2 mb-4">
-<li><span class="font-semibold">New Line of Business Launch:</span> Created and launched co-branded partner sites featuring OpenID Connect authentication and customizable pricing, content, and features, accounting for <strong>16%</strong> of all European traffic and establishing a new revenue channel.</li>
-<li><span class="font-semibold">Revenue Growth:</span> Increased mobile gross conversions by <strong>5%</strong>, driving revenue growth in the legal document product line, which contributes <strong>90%</strong> of U.S. revenue, through targeted A/B testing and strategic UX enhancements.</li>
+<li><span class="font-semibold">New Line of Business Launch:</span> Created and launched co-branded partner sites featuring OpenID Connect authentication and customizable pricing, content, and features, accounting for <strong>16% of all European traffic</strong> and establishing a new revenue channel.</li>
+<li><span class="font-semibold">Revenue Growth:</span> Increased mobile gross conversions by <strong>5%</strong>, driving revenue growth in the legal document product line, which contributes <strong>90% of U.S. revenue</strong>, through targeted A/B testing and strategic UX enhancements.</li>
 <li><span class="font-semibold">Product Integration:</span> Boosted eSign start rates by <strong>13%</strong> through the strategic integration of Legal Documents with RocketSign, enhancing overall user experience and product efficiency.</li>
 <li><span class="font-semibold">Data Instrumentation:</span> Achieved record-breaking conversion rates by developing custom analytics tools to link platform performance with conversion metrics, coupled with strategic enhancements to the checkout process.</li>
 <li><span class="font-semibold">Strategic Planning:</span> Collaborated with cross-functional teams and C-suite leadership to define and maintain product roadmaps, ensuring alignment with company objectives and customer needs.</li>
@@ -375,7 +375,7 @@ ORACLE
 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Lever-logo-joiy1CFYIGkNJB4pTFGViIrCOHNbq4.png" alt="Lever logo" class="w-full h-48 object-cover">
 <div class="p-6">
 <h3 class="text-xl font-bold mb-2 text-gray-800">Org Chart Sync and Self-Serve Bulk Importer</h3>
-<p class="text-gray-600 mb-4">Launched Org Chart Sync for HRIS integration, improving user profiles and enabling org chart-aware proxy approval for requisitions, postings, and offers. Achieved a <strong>37%</strong> product engagement rate in the first quarter and improved Time to Hire and Time to Fill metrics, streamlining workflows and enhancing the overall user experience.</p>
+<p class="text-gray-600 mb-4">Launched Org Chart Sync for HRIS integration, improving user profiles and enabling org chart-aware proxy approval for requisitions, postings, and offers. Achieved a <strong>37% product engagement rate</strong> in the first quarter and improved Time to Hire and Time to Fill metrics, streamlining workflows and enhancing the overall user experience.</p>
 <div class="flex flex-wrap">
 <span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">HRIS</span>
 <span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">Automation</span>
@@ -389,7 +389,7 @@ ORACLE
 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Rocket%20Lawyer-rp4YsC8U09zO3ssfG9J781arqsI8gY.png" alt="Rocket Lawyer logo" class="w-full h-48 object-cover">
 <a href="https://middleton.io/rocketlawyer/" target="_blank" rel="noopener noreferrer" class="block p-6">
 <h3 class="text-xl font-bold mb-2 text-gray-800">Co-Branded Partner Sites</h3>
-<p class="text-gray-600 mb-4">Led the creation and launch of co-branded partner sites for Rocket Lawyer, integrating OpenID Connect authentication with customizable pricing, content, and features. This project accounted for <strong>16%</strong> of European traffic and opened a new revenue channel.</p>
+<p class="text-gray-600 mb-4">Led the creation and launch of co-branded partner sites for Rocket Lawyer, integrating OpenID Connect authentication with customizable pricing, content, and features. This project accounted for <strong>16% of European traffic</strong> and opened a new revenue channel.</p>
 <div class="flex flex-wrap">
 <span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">Growth</span>
 <span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">Partnerships</span>
@@ -408,7 +408,7 @@ ORACLE
 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Rocket%20Lawyer-rp4YsC8U09zO3ssfG9J781arqsI8gY.png" alt="Rocket Lawyer logo" class="w-full h-48 object-cover">
 <div class="p-6">
 <h3 class="text-xl font-bold mb-2 text-gray-800">Legal Document Conversion Rates</h3>
-<p class="text-gray-600 mb-4">Increased mobile gross conversions by <strong>5%</strong>, driving revenue growth in the legal document product line, which contributes <strong>90%</strong> of U.S. revenue. Achieved this through targeted A/B testing and strategic UX enhancements across mobile and desktop platforms.</p>
+<p class="text-gray-600 mb-4">Increased mobile gross conversions by <strong>5%</strong>, driving revenue growth in the legal document product line, which contributes <strong>90% of U.S. revenue</strong>. Achieved this through targeted A/B testing and strategic UX enhancements across mobile and desktop platforms.</p>
 <div class="flex flex-wrap">
 <span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">A/B Testing</span>
 <span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">Conversion Optimization</span>
@@ -421,7 +421,7 @@ ORACLE
 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Oracle%20Logo-MN5MOqvV7I48zdxU17Tcd4u3tFEVvz.png" alt="Oracle logo" class="w-full h-48 object-cover">
 <div class="p-6">
 <h3 class="text-xl font-bold mb-2 text-gray-800">Engage v2 and New Networks</h3>
-<p class="text-gray-600 mb-4">Led the development and launch of Oracle Social Cloud's v2 community management product, integrating LinkedIn, Instagram, Sina Weibo, and Tumblr to expand network coverage. Launched <strong>36</strong> features in one year and doubled network reach, significantly enhancing customer satisfaction and platform adoption.</p>
+<p class="text-gray-600 mb-4">Led the development and launch of Oracle Social Cloud's v2 community management product, integrating LinkedIn, Instagram, Sina Weibo, and Tumblr to expand network coverage. Launched <strong>36 features</strong> in one year and doubled network reach, significantly enhancing customer satisfaction and platform adoption.</p>
 <div class="flex flex-wrap">
 <span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">Product Strategy</span>
 <span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">Integrations</span>
@@ -434,7 +434,7 @@ ORACLE
 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Hurd%20AI%20Logo%20-%20black-Kiq9Pg4DoqXhqXSMn56IyIbngXfYd6.png" alt="Hurd AI logo" class="w-full h-48 object-cover">
 <div class="p-6">
 <h3 class="text-xl font-bold mb-2 text-gray-800">AI-Powered Learning Platform</h3>
-<p class="text-gray-600 mb-4">Led the development of AI-powered educational tools, a Mac app and a web-based chatbot, to deliver personalized learning experiences. Drove <strong>700%</strong> user growth post-launch.</p>
+<p class="text-gray-600 mb-4">Led the development of AI-powered educational tools, a Mac app and a web-based chatbot, to deliver personalized learning experiences. Drove <strong>700% user growth</strong> post-launch.</p>
 <div class="flex flex-wrap">
 <span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">AI</span>
 <span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">Product Strategy</span>
@@ -545,7 +545,6 @@ Analytical &amp; Research
 <li>Data-Driven</li>
 <li>User-Centric Design</li>
 <li>A/B Testing</li>
-<li>Customer Research</li>
 <li>User Research</li>
 <li>Continuous Improvement</li>
 </ul>
