--- a/index.htm
+++ b/index.htm
@@ -166,11 +166,11 @@ When I'm not working, you'll find me indulging my inner pop culture nerd with mu
 <div class="space-y-16">
 <div class="bg-white rounded-lg shadow-xl p-6 relative overflow-hidden">
 <div class="flex items-center mb-4">
-<div class="w-16 h-16 bg-gray-200 rounded-full mr-4 flex items-center justify-center overflow-hidden">
+<div class="w-12 h-12 sm:w-16 sm:h-16 bg-gray-200 rounded-full mr-4 flex-shrink-0 flex items-center justify-center overflow-hidden">
 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/hvacdotcom-nWdwl6aMcQl1ikE1sN11xmsnfbsNco.png" alt="HVAC.COM logo" class="object-contain">
 </div>
 <div>
-<h3 class="text-2xl font-bold text-gray-800 mb-1">
+<h3 class="text-xl sm:text-2xl font-bold text-gray-800 mb-1">
 <a href="https://www.hvac.com" target="_blank" rel="noopener noreferrer" class="hover:underline">
 HVAC.COM
 </a>
@@ -197,12 +197,12 @@ HVAC.COM
 
 <div class="bg-white rounded-lg shadow-xl p-6 relative overflow-hidden">
 <div class="flex items-center mb-4">
-<div class="w-16 h-16 bg-gray-200 rounded-full mr-4 flex items-center justify-center overflow-hidden">
+<div class="w-12 h-12 sm:w-16 sm:h-16 bg-gray-200 rounded-full mr-4 flex-shrink-0 flex items-center justify-center overflow-hidden">
 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/hurd_ai_logo-afkEPW8u7wmqyrcWxbqPFEaD006gfx.png" alt="HURD AI logo" class="object-contain">
 </div>
 
 <div>
-<h3 class="text-2xl font-bold text-gray-800 mb-1">
+<h3 class="text-xl sm:text-2xl font-bold text-gray-800 mb-1">
 <a href="https://hurd.ai" target="_blank" rel="noopener noreferrer" class="hover:underline">
 HURD AI
 </a>
@@ -226,11 +226,11 @@ HURD AI
 
 <div class="bg-white rounded-lg shadow-xl p-6 relative overflow-hidden">
 <div class="flex items-center mb-4">
-<div class="w-16 h-16 bg-gray-200 rounded-full mr-4 flex items-center justify-center overflow-hidden">
+<div class="w-12 h-12 sm:w-16 sm:h-16 bg-gray-200 rounded-full mr-4 flex-shrink-0 flex items-center justify-center overflow-hidden">
 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/lever-cTlphHdjCLKnZ7ZvFV8b0H6QJTQcWS.webp" alt="LEVER logo" class="object-contain">
 </div>
 <div>
-<h3 class="text-2xl font-bold text-gray-800 mb-1">
+<h3 class="text-xl sm:text-2xl font-bold text-gray-800 mb-1">
 <a href="https://www.lever.co" target="_blank" rel="noopener noreferrer" class="hover:underline">
 LEVER
 </a>
@@ -256,11 +256,11 @@ LEVER
 
 <div class="bg-white rounded-lg shadow-xl p-6 relative overflow-hidden">
 <div class="flex items-center mb-4">
-<div class="w-16 h-16 bg-gray-200 rounded-full mr-4 flex items-center justify-center overflow-hidden">
+<div class="w-12 h-12 sm:w-16 sm:h-16 bg-gray-200 rounded-full mr-4 flex-shrink-0 flex items-center justify-center overflow-hidden">
 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/sendoso-6CCvvT2hRYvK6aAECPaXC6LxfXkCIF.png" alt="SENDOSO logo" class="object-contain">
 </div>
 <div>
-<h3 class="text-2xl font-bold text-gray-800 mb-1">
+<h3 class="text-xl sm:text-2xl font-bold text-gray-800 mb-1">
 <a href="https://www.sendoso.com" target="_blank" rel="noopener noreferrer" class="hover:underline">
 SENDOSO
 </a>
@@ -295,11 +295,11 @@ SENDOSO
 
 <div class="bg-white rounded-lg shadow-xl p-6 relative overflow-hidden">
 <div class="flex items-center mb-4">
-<div class="w-16 h-16 bg-gray-200 rounded-full mr-4 flex items-center justify-center overflow-hidden">
+<div class="w-12 h-12 sm:w-16 sm:h-16 bg-gray-200 rounded-full mr-4 flex-shrink-0 flex items-center justify-center overflow-hidden">
 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/rocket-lawyer-SRYvnP1gsz47Bj5Hn2FYU6WSkVcltl.png" alt="ROCKET LAWYER logo" class="object-contain">
 </div>
 <div>
-<h3 class="text-2xl font-bold text-gray-800 mb-1">
+<h3 class="text-xl sm:text-2xl font-bold text-gray-800 mb-1">
 <a href="https://www.rocketlawyer.com" target="_blank" rel="noopener noreferrer" class="hover:underline">
 ROCKET LAWYER
 </a>
@@ -326,11 +326,11 @@ ROCKET LAWYER
 
 <div class="bg-white rounded-lg shadow-xl p-6 relative overflow-hidden">
 <div class="flex items-center mb-4">
-<div class="w-16 h-16 bg-gray-200 rounded-full mr-4 flex items-center justify-center overflow-hidden">
+<div class="w-12 h-12 sm:w-16 sm:h-16 bg-gray-200 rounded-full mr-4 flex-shrink-0 flex items-center justify-center overflow-hidden">
 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Oracle-Social-vom4QuVyHBGbeBeevIOqHNqIiVAJQ8.png" alt="ORACLE logo" class="object-contain">
 </div>
 <div>
-<h3 class="text-2xl font-bold text-gray-800 mb-1">
+<h3 class="text-xl sm:text-2xl font-bold text-gray-800 mb-1">
 <a href="https://www.oracle.com" target="_blank" rel="noopener noreferrer" class="hover:underline">
 ORACLE
 </a>
