--- a/index.htm
+++ b/index.htm
@@ -125,9 +125,9 @@ Kevin Middleton
             <a href="#about" class="inline-flex items-center justify-center bg-transparent text-white border-2 border-white px-6 py-3 rounded-full hover:bg-white hover:text-[#00a8ff] transition-colors">About Me</a>
           </div>
         </div>
-<div class="max-w-4xl mx-auto bg-white bg-opacity-10 rounded-lg shadow-xl p-8 mt-12">
-<h2 class="text-2xl md:text-3xl lg:text-4xl font-bold mb-6 text-center text-white whitespace-nowrap overflow-hidden text-ellipsis"><span class="inline-block text-[clamp(1.25rem,2.5vw,1.75rem)]">Building Enterprise, Platform, and Consumer SaaS Products</span></h2>
-<p class="text-lg text-white leading-relaxed">
+<div class="max-w-4xl mx-auto bg-white bg-opacity-10 rounded-lg shadow-xl p-4 sm:p-8 mt-8 sm:mt-12">
+<h2 class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold mb-4 sm:mb-6 text-center text-white whitespace-nowrap overflow-hidden"><span class="inline-block text-[clamp(0.8rem,2.5vw,1.75rem)]">Building Enterprise, Platform, and Consumer SaaS Products</span></h2>
+<p class="text-sm sm:text-base md:text-lg text-white leading-relaxed">
 With over 10 years of experience in product management, I turn complex challenges into smart, data-driven solutions. I'm skilled at building strategies that boost user engagement, improve conversions, and bring teams together around shared goals. Whether it's social media, legal tech, marketing tech, HR tech, EdTech, or HVAC, I focus on creating products that drive real growth and deliver measurable results.
 </p>
 </div>
