--- a/index.htm
+++ b/index.htm
@@ -120,23 +120,25 @@ Kevin Middleton
         <div class="text-center z-10 mb-12">
           <h1 class="text-4xl md:text-6xl font-bold mb-4 text-white">Kevin Middleton</h1>
           <p class="text-xl md:text-2xl mb-8 text-white">Full Stack Product Manager</p>
-          <div class="flex justify-center space-x-4 items-center">
+          <div class="flex justify-center space-x-4 items-center mb-8">
             <a href="#experience" class="inline-flex items-center justify-center bg-white text-[#00a8ff] px-6 py-3 rounded-full hover:bg-gray-200 transition-colors">See My Work</a>
             <a href="#about" class="inline-flex items-center justify-center bg-transparent text-white border-2 border-white px-6 py-3 rounded-full hover:bg-white hover:text-[#00a8ff] transition-colors">About Me</a>
           </div>
+          <div class="max-w-4xl mx-auto bg-white bg-opacity-10 rounded-lg shadow-xl p-4 sm:p-8 mb-8">
+            <h2 class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold mb-4 sm:mb-6 text-center text-white whitespace-nowrap overflow-hidden">
+              <span class="inline-block text-[clamp(0.8rem,2.5vw,1.75rem)]">Building Enterprise, Platform, and Consumer SaaS Products</span>
+            </h2>
+            <p class="text-sm sm:text-base md:text-lg text-white leading-relaxed">
+              With over 10 years of experience in product management, I turn complex challenges into smart, data-driven solutions. I'm skilled at building strategies that boost user engagement, improve conversions, and bring teams together around shared goals. Whether it's social media, legal tech, marketing tech, HR tech, EdTech, or HVAC, I focus on creating products that drive real growth and deliver measurable results.
+            </p>
+          </div>
         </div>
-<div class="max-w-4xl mx-auto bg-white bg-opacity-10 rounded-lg shadow-xl p-4 sm:p-8 mt-8 sm:mt-12">
-<h2 class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold mb-4 sm:mb-6 text-center text-white whitespace-nowrap overflow-hidden"><span class="inline-block text-[clamp(0.8rem,2.5vw,1.75rem)]">Building Enterprise, Platform, and Consumer SaaS Products</span></h2>
-<p class="text-sm sm:text-base md:text-lg text-white leading-relaxed">
-With over 10 years of experience in product management, I turn complex challenges into smart, data-driven solutions. I'm skilled at building strategies that boost user engagement, improve conversions, and bring teams together around shared goals. Whether it's social media, legal tech, marketing tech, HR tech, EdTech, or HVAC, I focus on creating products that drive real growth and deliver measurable results.
-</p>
-</div>
-<div class="absolute bottom-10 left-1/2 transform -translate-x-1/2">
-<svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-white animate-bounce" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 14l-7 7m0 0l-7-7m7 7V3" />
-</svg>
-</div>
-</section>
+        <div class="absolute bottom-10 left-1/2 transform -translate-x-1/2">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-white animate-bounce" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 14l-7 7m0 0l-7-7m7 7V3" />
+          </svg>
+        </div>
+    </section>
 
 <section id="about" class="py-20 gradient-bg-2">
 <div class="container mx-auto px-4">
