--- a/index.htm
+++ b/index.htm
@@ -114,19 +114,21 @@ Kevin Middleton
 </div>
 </nav>
 </header>
-
 <main>
-    <section id="hero" class="min-h-screen flex flex-col items-center justify-center relative gradient-bg-1">
-        <div class="text-center z-10 mb-12">
-          <h1 class="text-4xl md:text-6xl font-bold mb-4 text-white">Kevin Middleton</h1>
-          <p class="text-xl md:text-2xl mb-8 text-white">Full Stack Product Manager</p>
+<main>
+    <section id="hero" class="min-h-screen flex flex-col items-center justify-start pt-16 md:justify-center relative gradient-bg-1">
+        <div class="text-center mb-8 md:mb-12">
+            <h1 class="text-4xl font-bold text-white mb-2">Kevin Middleton</h1>
+            <p class="text-xl text-white">Full Stack Product Manager</p>
+        </div>
+        <div class="text-center z-10 px-4 md:px-0">
           <div class="flex justify-center space-x-4 items-center mb-8">
             <a href="#experience" class="inline-flex items-center justify-center bg-white text-[#00a8ff] px-6 py-3 rounded-full hover:bg-gray-200 transition-colors">See My Work</a>
             <a href="#about" class="inline-flex items-center justify-center bg-transparent text-white border-2 border-white px-6 py-3 rounded-full hover:bg-white hover:text-[#00a8ff] transition-colors">About Me</a>
           </div>
-          <div class="max-w-4xl mx-auto bg-white bg-opacity-10 rounded-lg shadow-xl p-4 sm:p-8 mb-8">
-            <h2 class="text-xl sm:text-2xl md:text-3xl lg:text-4xl font-bold mb-4 sm:mb-6 text-center text-white whitespace-nowrap overflow-hidden">
-              <span class="inline-block text-[clamp(0.8rem,2.5vw,1.75rem)]">Building Enterprise, Platform, and Consumer SaaS Products</span>
+          <div class="max-w-4xl mx-auto bg-white bg-opacity-10 rounded-lg shadow-xl p-4 sm:p-6 md:p-8">
+            <h2 class="text-lg sm:text-xl md:text-2xl lg:text-3xl font-bold mb-4 sm:mb-6 text-center text-white">
+              <span class="inline-block">Building Enterprise, Platform, and Consumer SaaS Products</span>
             </h2>
             <p class="text-sm sm:text-base md:text-lg text-white leading-relaxed">
               With over 10 years of experience in product management, I turn complex challenges into smart, data-driven solutions. I'm skilled at building strategies that boost user engagement, improve conversions, and bring teams together around shared goals. Whether it's social media, legal tech, marketing tech, HR tech, EdTech, or HVAC, I focus on creating products that drive real growth and deliver measurable results.
@@ -139,6 +141,7 @@ Kevin Middleton
           </svg>
         </div>
     </section>
+</main>
 
 <section id="about" class="py-20 gradient-bg-2">
 <div class="container mx-auto px-4">
