--- a/index.htm
+++ b/index.htm
@@ -126,7 +126,7 @@ Kevin Middleton
             <a href="#experience" class="inline-flex items-center justify-center bg-white text-[#00a8ff] px-6 py-3 rounded-full hover:bg-gray-200 transition-colors">See My Work</a>
             <a href="#about" class="inline-flex items-center justify-center bg-transparent text-white border-2 border-white px-6 py-3 rounded-full hover:bg-white hover:text-[#00a8ff] transition-colors">About Me</a>
           </div>
-          <div class="max-w-4xl mx-auto bg-white bg-opacity-10 rounded-lg shadow-xl p-4 sm:p-6 md:p-8">
+          <div class="max-w-4xl mx-auto bg-white bg-opacity-10 rounded-lg shadow-xl p-4 sm:p-6 md:p-8 mb-12">
             <h2 class="text-lg sm:text-xl md:text-2xl lg:text-3xl font-bold mb-4 sm:mb-6 text-center text-white">
               <span class="inline-block">Building Enterprise, Platform, and Consumer SaaS Products</span>
             </h2>
@@ -135,7 +135,7 @@ Kevin Middleton
             </p>
           </div>
         </div>
-        <div class="absolute bottom-10 left-1/2 transform -translate-x-1/2">
+        <div class="mt-4 md:absolute md:bottom-10 left-1/2 transform -translate-x-1/2">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-white animate-bounce" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 14l-7 7m0 0l-7-7m7 7V3" />
           </svg>
