--- a/index.htm
+++ b/index.htm
@@ -776,7 +776,7 @@ View More on LinkedIn
 <div class="container mx-auto px-4">
 <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-white">Let's Connect!</h2>
 <p class="text-center text-lg mb-8 max-w-3xl mx-auto text-white">
-Whether it's about product management or just to chat, I'd love to connect with you! Feel free to reach out via email, LinkedIn, GitHub, or schedule a call using my Calendly link.
+Whether it's about product management or just to chat, I'd love to connect with you! Feel free to reach out via email, LinkedIn, or schedule a call using my Calendly link.
 </p>
 <div class="flex justify-center space-x-6">
 <a href="mailto:&#107;&#101;&#118;&#105;&#110;&#46;&#109;&#105;&#100;&#100;&#108;&#101;&#116;&#111;&#110;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;?subject=Hello%20Kevin%20%E2%80%93%20Let%E2%80%99s%20Connect" class="bg-white text-blue-500 rounded-full p-4 hover:bg-gray-200 transition-colors">
