--- a/index.htm
+++ b/index.htm
@@ -423,7 +423,7 @@ ORACLE
 </div>
 </div>
 <div class="bg-white rounded-lg shadow-xl overflow-hidden project-card">
-<img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Oracle%20Logo-MN5MOqvV7I48zdxU17Tcd4u3tFEVvz.png" alt="Oracle logo" class="w-full h-48 object-cover">
+<img src="https://github.com/kevinmmiddleton/about/raw/main/images/Oracle%20Logo.png" alt="Oracle logo" class="w-full h-48 object-cover">
 <div class="p-6">
 <h3 class="text-xl font-bold mb-2 text-gray-800">Engage v2 and New Networks</h3>
 <p class="text-gray-600 mb-4">Led the development and launch of Oracle Social Cloud's v2 community management product, integrating LinkedIn, Instagram, Sina Weibo, and Tumblr to expand network coverage. Launched <strong>36 features</strong> in one year and doubled network reach, significantly enhancing customer satisfaction and platform adoption.</p>
