--- a/index.htm
+++ b/index.htm
@@ -216,10 +216,11 @@ HURD AI
 </div>
 </div>
 <p class="text-gray-600  mb-4">2023  | Berkeley, CA</p>
+<p class="text-gray-700 mb-4">As a co-founder and product advisor at Hurd AI, I played a pivotal role in shaping the company’s early direction and ensuring the successful launch of AI-powered educational tools, including a Mac app and a web-based chatbot designed to help users capture, tag, and summarize transcripts of lectures and meetings with ease.</p>
 <ul class="list-disc list-inside  text-gray-700 space-y-2 mb-4">
-<li>Led the development of AI-powered educational tools: a Mac app and a web-based chatbot.</li>
-<li>Drove <strong>700% user growth</strong> post-launch.</li>
-<li>Versatility in roles, including Strategy, Marketing, Support, User Research, and Quality Assurance, crucial in the successful launch and growth of Hurd AI.</li>
+<li><strong>Led the development of AI-powered educational tools:</strong> Mac app and a web-based chatbot.</li>
+<li><strong>User Growth:</strong> Drove <strong>700% user growth</strong> post-launch.</li>
+<li><strong>Versatility in roles:</strong> Strategy, Marketing, Support, User Research, and Quality Assurance, crucial in the successful launch and growth of Hurd AI.</li>
 </ul>
 <div class="grid grid-cols-2 md:grid-cols-4 gap-4 mt-4">
 <img src="https://middleton.io/images/hurd-ai-search-highlight.gif" alt="HURD AI search  highlight" class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
