--- a/index.htm
+++ b/index.htm
@@ -131,7 +131,7 @@ Kevin Middleton
               <span class="inline-block">Building Enterprise, Platform, and Consumer SaaS Products</span>
             </h2>
             <p class="text-sm sm:text-base md:text-lg text-white leading-relaxed">
-              With over 10 years of experience in product management, I turn complex challenges into smart, data-driven solutions. I'm skilled at building strategies that boost user engagement, improve conversions, and bring teams together around shared goals. Whether it's social media, legal tech, marketing tech, HR tech, EdTech, or HVAC, I focus on creating products that drive real growth and deliver measurable results.
+                With over 10 years of experience in product management, I turn complex challenges into smart, data-driven solutions. I’m skilled at building strategies that boost engagement, improve conversions, and bring teams together. My work spans industries like social media, legal tech, marketing tech, HR tech, EdTech, and HVAC, driving growth and measurable results.
             </p>
           </div>
         </div>
