--- a/index.htm
+++ b/index.htm
@@ -128,10 +128,10 @@ Kevin Middleton
           </div>
           <div class="max-w-4xl mx-auto bg-white bg-opacity-10 rounded-lg shadow-xl p-4 sm:p-6 md:p-8 mb-12">
             <h2 class="text-lg sm:text-xl md:text-2xl lg:text-3xl font-bold mb-4 sm:mb-6 text-center text-white">
-              <span class="inline-block">Building Enterprise, Platform, and Consumer SaaS Products</span>
+              <span class="inline-block whitespace-nowrap text-[clamp(0.875rem,2vw,1.875rem)]">Building Enterprise, Platform, and Consumer SaaS Products</span>
             </h2>
             <p class="text-sm sm:text-base md:text-lg text-white leading-relaxed">
-                With over 10 years of experience in product management, I turn complex challenges into smart, data-driven solutions. I’m skilled at building strategies that boost engagement, improve conversions, and bring teams together. My work spans industries like social media, legal tech, marketing tech, HR tech, EdTech, and HVAC, driving growth and measurable results.
+                With over 10 years of experience in product management, I turn complex challenges into smart, data-driven solutions. I'm skilled at building strategies that boost engagement, improve conversions, and bring teams together. My work spans industries like social media, legal tech, marketing tech, HR tech, EdTech, and HVAC, driving growth and measurable results.
             </p>
           </div>
         </div>
@@ -378,7 +378,7 @@ ORACLE
 </div>
 </div>
 <div class="bg-white rounded-lg shadow-xl overflow-hidden project-card">
-<img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Lever-logo-joiy1CFYIGkNJB4pTFGViIrCOHNbq4.png" alt="Lever logo" class="w-full h-48 object-cover">
+<img src="https://github.com/kevinmmiddleton/about/raw/main/images/Lever-logo.png" alt="Lever logo" class="w-full h-48 object-cover">
 <div class="p-6">
 <h3 class="text-xl font-bold mb-2 text-gray-800">Org Chart Sync and Self-Serve Bulk Importer</h3>
 <p class="text-gray-600 mb-4">Launched Org Chart Sync for HRIS integration, improving user profiles and enabling org chart-aware proxy approval for requisitions, postings, and offers. Achieved a <strong>37% product engagement rate</strong> in the first quarter and improved Time to Hire and Time to Fill metrics, streamlining workflows and enhancing the overall user experience.</p>
