--- a/rocketlawyer/index.htm
+++ b/rocketlawyer/index.htm
@@ -242,7 +242,12 @@ blockquote {
         </div>
         <div class="card">
             <h3><i class="fas fa-bolt icon"></i>Pain Points Addressed</h3>
-            <p>Providing partner customers with digital legal documents, eSigning, and 'Ask A Lawyer' capabilities.</p>
+            <strong>Providing partner customers with:</strong>
+            <ul>
+                <li>Digital Legal Documents</li>
+                <li>eSigning</li>
+                <li>'Ask A Lawyer'</li>
+            </ul>
         </div>
     </div>
 </div>
@@ -440,12 +445,12 @@ blockquote {
         <div>
             <blockquote>
                 <p>"We are delighted to partner with Rocket Lawyer to provide new legal solutions to our 11.5 million clients."</p>
-                <footer>- Christophe Bardet, General Manager of Covéa Protection Juridique</footer>
             </blockquote>
+            <footer>- Christophe Bardet, General Manager of Covéa Protection Juridique</footer>
             <blockquote>
                 <p>"We gave Kevin an extremely complex and strategic partner project  to tackle and he really knocked it out of the park. He quickly onboarded to the product development challenge, understood the breadth of the deliverables, and started to methodically chip away at them. His team was hyper-focused and motivated, thanks mostly to Kevin and his constant energy and attitude."</p>
-                <footer>- Rob Elhardt, VP of Product Management</footer>
             </blockquote>
+            <footer>- Rob Elhardt, VP of Product Management</footer>
         </div>
     </div>
 </div>
