--- a/index.htm
+++ b/index.htm
@@ -73,7 +73,7 @@ cursor: pointer;
 <!-- Open Graph Meta Tags -->
 <meta name="author" content="Kevin Middleton">
 <meta property="og:title" content="Kevin Middleton">
-<meta property="og:description" content="evin Middleton is a Full Stack Product Manager with 10+ years of experience in building enterprise, platform, and consumer SaaS products. Specializing in data-driven strategies, Kevin enhances user engagement, boosts conversions, and drives measurable growth across industries like social media, legal tech, marketing tech, and HVAC. Explore his work, insights, and projects.">
+<meta property="og:description" content="Kevin Middleton is a Full Stack Product Manager with 10+ years of experience in building enterprise, platform, and consumer SaaS products. Specializing in data-driven strategies, Kevin enhances user engagement, boosts conversions, and drives measurable growth across industries like social media, legal tech, marketing tech, and HVAC. Explore his work, insights, and projects.">
 <meta property="og:url" content="https://middleton.io">
 <meta property="og:image" name="image" content="https://middleton.io/images/HeyThere.png">
 
