--- a/index.htm
+++ b/index.htm
@@ -12,6 +12,11 @@ body {
 h1, h2, h3, h4, h5, h6 {
      font-family: 'Inter', sans-serif;
    }
+.location {
+     font-size: 0.9em;
+     color: #e6f7ff;
+     margin-top: 5px;
+   }
 .gradient-bg-1 { background: linear-gradient(to bottom, #00a8ff, #205aff); }
 .gradient-bg-2 { background: linear-gradient(to bottom, #205aff, #4021ff); }
 .gradient-bg-3 { background: linear-gradient(to bottom, #4021ff, #5e00ff); }
@@ -73,7 +78,7 @@ cursor: pointer;
 <!-- Open Graph Meta Tags -->
 <meta name="author" content="Kevin Middleton">
 <meta property="og:title" content="Kevin Middleton">
-<meta property="og:description" content="Kevin Middleton is a Full Stack Product Manager with 10+ years of experience in building enterprise, platform, and consumer SaaS products. Specializing in data-driven strategies, Kevin enhances user engagement, boosts conversions, and drives measurable growth across industries like social media, legal tech, marketing tech, and HVAC. Explore his work, insights, and projects.">
+<meta property="og:description" content="Kevin Middleton is a Full-Stack Product Manager with 10+ years of experience building consumer, enterprise, and platform SaaS products. Passionate about working with cross-functional teams, Kevin excels at solving complex problems and delivering impactful products through thoughtful collaboration. Specializing in data-driven strategies, he drives user engagement, boosts conversions, and fosters measurable growth across industries such as social media, legal tech, marketing tech, and HVAC.">
 <meta property="og:url" content="https://middleton.io">
 <meta property="og:image" name="image" content="https://middleton.io/images/HeyThere.png">
 
@@ -120,6 +125,7 @@ Kevin Middleton
         <div class="text-center mb-8 md:mb-12">
             <h1 class="text-4xl font-bold text-white mb-2">Kevin Middleton</h1>
             <p class="text-xl text-white">Full Stack Product Manager</p>
+            <div class="location">📍 New York City</div>
         </div>
         <div class="text-center z-10 px-4 md:px-0">
           <div class="flex justify-center space-x-4 items-center mb-8">
