--- a/index.htm
+++ b/index.htm
@@ -134,7 +134,7 @@ Kevin Middleton
           </div>
           <div class="max-w-4xl mx-auto bg-white bg-opacity-10 rounded-lg shadow-xl p-4 sm:p-6 md:p-8 mb-12">
             <h2 class="text-lg sm:text-xl md:text-2xl lg:text-3xl font-bold mb-4 sm:mb-6 text-center text-white">
-              <span class="inline-block whitespace-nowrap text-[clamp(0.875rem,2vw,1.875rem)]">Building Enterprise, Platform, and Consumer SaaS Products</span>
+              <span class="inline-block whitespace-nowrap text-[clamp(0.875rem,2vw,1.875rem)]">Building Consumer, Enterprise, and Platform SaaS Products</span>
             </h2>
             <p class="text-sm sm:text-base md:text-lg text-white leading-relaxed">
                 With over 10 years of experience in product management, I turn complex challenges into smart, data-driven solutions. I'm skilled at building strategies that boost engagement, improve conversions, and bring teams together. My work spans industries like social media, legal tech, marketing tech, HR tech, EdTech, and HVAC, driving growth and measurable results.
