--- a/index.htm
+++ b/index.htm
@@ -32,7 +32,8 @@ h1, h2, h3, h4, h5, h6 {
 transition: transform 0.3s ease-in-out;
 }
 .project-card:hover {
-transform: scale(1.05);
+    transform: scale(1.05);
+    transition: transform 0.5s ease-in-out;  /* Adjust duration and easing */
 }
 .lightbox {
 display: none;
@@ -137,7 +138,7 @@ Kevin Middleton
               <span class="inline-block whitespace-nowrap text-[clamp(0.875rem,2vw,1.875rem)]">Building Consumer, Enterprise, and Platform SaaS Products</span>
             </h2>
             <p class="text-sm sm:text-base md:text-lg text-white leading-relaxed">
-                With over 10 years of experience in product management, I turn complex challenges into smart, data-driven solutions. I'm skilled at building strategies that boost engagement, improve conversions, and bring teams together. My work spans industries like social media, legal tech, marketing tech, HR tech, EdTech, and HVAC, driving growth and measurable results.
+              With 10+ years of experience driving product strategies, I turn complex challenges into scalable, data-driven solutions. My work spans diverse industries—social media, legal tech, marketing tech, HR, EdTech, and HVAC—delivering measurable growth and product success.
             </p>
           </div>
         </div>
@@ -224,9 +225,9 @@ HURD AI
 <p class="text-gray-600  mb-4">2023  | Berkeley, CA</p>
 <p class="text-gray-700 mb-4">As a co-founder and product advisor at Hurd AI, I played a pivotal role in shaping the company’s early direction and ensuring the successful launch of AI-powered educational tools, including a Mac app and a web-based chatbot designed to help users capture, tag, and summarize transcripts of lectures and meetings with ease.</p>
 <ul class="list-disc list-inside  text-gray-700 space-y-2 mb-4">
-<li><strong>Led the development of AI-powered educational tools:</strong> Mac app and a web-based chatbot.</li>
+<li><strong>AI-Powered Educational Tools:</strong> Co-led the development and launch of AI-powered educational tools, including a Mac app and web-based chatbot.</li>
 <li><strong>User Growth:</strong> Drove <strong>700% user growth</strong> post-launch.</li>
-<li><strong>Versatility in roles:</strong> Strategy, Marketing, Support, User Research, and Quality Assurance, crucial in the successful launch and growth of Hurd AI.</li>
+<li><strong>Cross-Functional Leadership:</strong> Played a key role across multiple functions—strategy, marketing, user research, and support—to ensure a smooth and successful launch of Hurd AI.</li>
 </ul>
 <div class="grid grid-cols-2 md:grid-cols-4 gap-4 mt-4">
 <img src="https://middleton.io/images/hurd-ai-search-highlight.gif" alt="HURD AI search  highlight" class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
