--- a/index.htm
+++ b/index.htm
@@ -7,16 +7,16 @@
 <script src="https://cdn.tailwindcss.com"></script>
 <style>
 body {
-     font-family: 'Inter', sans-serif;
-   }
+    font-family: 'Inter', sans-serif;
+  }
 h1, h2, h3, h4, h5, h6 {
-     font-family: 'Inter', sans-serif;
-   }
+    font-family: 'Inter', sans-serif;
+  }
 .location {
-     font-size: 0.9em;
-     color: #e6f7ff;
-     margin-top: 5px;
-   }
+    font-size: 0.9em;
+    color: #e6f7ff;
+    margin-top: 5px;
+  }
 .gradient-bg-1 { background: linear-gradient(to bottom, #00a8ff, #205aff); }
 .gradient-bg-2 { background: linear-gradient(to bottom, #205aff, #4021ff); }
 .gradient-bg-3 { background: linear-gradient(to bottom, #4021ff, #5e00ff); }
@@ -32,8 +32,8 @@ h1, h2, h3, h4, h5, h6 {
 transition: transform 0.3s ease-in-out;
 }
 .project-card:hover {
-    transform: scale(1.05);
-    transition: transform 0.5s ease-in-out;  /* Adjust duration and easing */
+   transform: scale(1.05);
+   transition: transform 0.5s ease-in-out;  /* Adjust duration and easing */
 }
 .lightbox {
 display: none;
@@ -65,13 +65,13 @@ font-size: 30px;
 cursor: pointer;
 }
 .mobile-menu {
-    text-align: right;
-    width: auto;
-    max-width: 90vw;
-    padding-right: 1rem;
-    padding-left: 1rem;
-    background-color: rgba(255, 255, 255, 0.9);
-    backdrop-filter: blur(5px);
+   text-align: right;
+   width: auto;
+   max-width: 90vw;
+   padding-right: 1rem;
+   padding-left: 1rem;
+   background-color: rgba(255, 255, 255, 0.9);
+   backdrop-filter: blur(5px);
 }
 </style>
 <!-- Favicon -->
@@ -94,12 +94,10 @@ y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
 </head>
 <body class="min-h-screen">
 <header class="fixed top-0 left-0 right-0 bg-white bg-opacity-90 shadow-md z-50">
-<nav class="container mx-auto px-6 py-3">
-<div class="flex items-center justify-between">
-<a href="#hero" class="text-2xl font-bold text-gray-800">
+<nav class="container mx-auto px-6 h-16 flex items-center justify-between">
+<a href="#hero" class="text-xl font-bold text-gray-800">
 <span id="header-name" class="hidden">
-Kevin Middleton
-<span class="text-sm block font-normal">Full Stack Product Manager</span>
+<span class="font-bold">Kevin Middleton</span> | <span class="font-normal">Full Stack Product Manager</span>
 </span>
 </a>
 <div class="md:hidden">
@@ -117,38 +115,35 @@ Kevin Middleton
 <li><a href="#skills" class="text-gray-700 hover:text-gray-900">Skills</a></li>
 <li><a href="#connect" class="text-gray-700 hover:text-gray-900">Connect</a></li>
 </ul>
-</div>
 </nav>
 </header>
-<main>
-<main>
-    <section id="hero" class="min-h-screen flex flex-col items-center justify-start pt-16 md:justify-center relative gradient-bg-1">
-        <div class="text-center mb-8 md:mb-12">
-            <h1 class="text-4xl font-bold text-white mb-2">Kevin Middleton</h1>
-            <p class="text-xl text-white">Full Stack Product Manager</p>
-            <div class="location">📍 New York City</div>
-        </div>
-        <div class="text-center z-10 px-4 md:px-0">
-          <div class="flex justify-center space-x-4 items-center mb-8">
-            <a href="#experience" class="inline-flex items-center justify-center bg-white text-[#00a8ff] px-6 py-3 rounded-full hover:bg-gray-200 transition-colors">See My Work</a>
-            <a href="#about" class="inline-flex items-center justify-center bg-transparent text-white border-2 border-white px-6 py-3 rounded-full hover:bg-white hover:text-[#00a8ff] transition-colors">About Me</a>
-          </div>
-          <div class="max-w-4xl mx-auto bg-white bg-opacity-10 rounded-lg shadow-xl p-6 sm:p-8 md:p-10 mb-12">
-            <h2 class="text-lg sm:text-xl md:text-2xl lg:text-3xl font-bold mb-4 sm:mb-6 text-center text-white">
-              <span class="inline-block whitespace-nowrap text-[clamp(0.875rem,2vw,1.875rem)]">Building Consumer, Enterprise, and Platform SaaS Products</span>
-            </h2>
-            <p class="text-sm sm:text-base md:text-lg text-white leading-relaxed">
-              With 10+ years of experience driving product strategies, I turn complex challenges into scalable, data-driven solutions. My work spans diverse industries—social media, legal tech, marketing tech, HR, EdTech, and HVAC—delivering measurable growth and product success.
-            </p>
-          </div>
-        </div>
-        <div class="mt-4 md:absolute md:bottom-10 left-1/2 transform -translate-x-1/2">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-white animate-bounce" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 14l-7 7m0 0l-7-7m7 7V3" />
-          </svg>
-        </div>
-    </section>
-</main>
+<main class="pt-16"> <!-- Added padding-top to account for fixed header -->
+<section id="hero" class="min-h-screen flex flex-col items-center justify-start pt-16 md:justify-center relative gradient-bg-1">
+   <div class="text-center mb-8 md:mb-12">
+       <h1 class="text-4xl font-bold text-white mb-2">Kevin Middleton</h1>
+       <p class="text-xl text-white">Full Stack Product Manager</p>
+       <div class="location">📍 New York City</div>
+   </div>
+   <div class="text-center z-10 px-4 md:px-0">
+     <div class="flex justify-center space-x-4 items-center mb-8">
+       <a href="#experience" class="inline-flex items-center justify-center bg-white text-[#00a8ff] px-6 py-3 rounded-full hover:bg-gray-200 transition-colors">See My Work</a>
+       <a href="#about" class="inline-flex items-center justify-center bg-transparent text-white border-2 border-white px-6 py-3 rounded-full hover:bg-white hover:text-[#00a8ff] transition-colors">About Me</a>
+     </div>
+     <div class="max-w-4xl mx-auto bg-white bg-opacity-10 rounded-lg shadow-xl p-4 sm:p-6 md:p-8 mb-12">
+       <h2 class="text-lg sm:text-xl md:text-2xl lg:text-3xl font-bold mb-4 sm:mb-6 text-center text-white">
+         <span class="inline-block whitespace-nowrap text-[clamp(0.875rem,2vw,1.875rem)]">Building Consumer, Enterprise, and Platform SaaS Products</span>
+       </h2>
+       <p class="text-sm sm:text-base md:text-lg text-white leading-relaxed">
+         With 10+ years of experience driving product strategies, I turn complex challenges into scalable, data-driven solutions. My work spans diverse industries—social media, legal tech, marketing tech, HR, EdTech, and HVAC—delivering measurable growth and product success.
+       </p>
+     </div>
+   </div>
+   <div class="mt-4 md:absolute md:bottom-10 left-1/2 transform -translate-x-1/2">
+     <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-white animate-bounce" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 14l-7 7m0 0l-7-7m7 7V3" />
+     </svg>
+   </div>
+</section>
 
 <section id="about" class="py-20 gradient-bg-2">
 <div class="container mx-auto px-4">
@@ -202,7 +197,7 @@ HVAC.COM
 <div class="grid grid-cols-2 md:grid-cols-4 gap-4 mt-4">
 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Calculators-ugatTWPQjMXKJgaVhpaFvInZcvUTnG.png" alt="HVAC.COM Calculators" class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/QuoteScore%20Landing%20Page-uuM6LcirnsW3dgC9uZ7IvQCkaH4o6t.png" alt="HVAC.COM QuoteScore Landing Page" class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
-<img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/video-CMzSXsw2YKljtBUuFMmwnpd5Vmbk7s.png" alt="HVAC.COM Video Content" class="rounded-md cursor-pointer  object-cover w-full h-48 lightbox-trigger">
+<img    src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/video-CMzSXsw2YKljtBUuFMmwnpd5Vmbk7s.png" alt="HVAC.COM Video Content" class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Replace%20Landing%20Page-3KAGV2Ct1GLuZUDCvnSCoy2zNnGaxf.png" alt="HVAC.COM Replace Landing Page" class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
 </div>
 </div>
@@ -887,21 +882,21 @@ menu.classList.toggle('right-0');
 menu.classList.toggle('shadow-md');
 menu.classList.toggle('py-2');
 menu.classList.toggle('mobile-menu');
-   });
-  
+ });
+
 // Close mobile menu when clicking outside
 document.addEventListener('click', (e) => {
 if (!menu.contains(e.target) && !menuToggle.contains(e.target)) {
-    menu.classList.add('hidden');
-    menu.classList.remove('flex', 'flex-col', 'absolute', 'top-full', 'right-0', 'bg-white', 'shadow-md', 'py-2', 'mobile-menu');
+menu.classList.add('hidden');
+menu.classList.remove('flex', 'flex-col', 'absolute', 'top-full', 'right-0', 'bg-white', 'shadow-md', 'py-2', 'mobile-menu');
 }
 });
 
 // Close mobile menu when clicking on a menu item
 menu.querySelectorAll('a').forEach(link => {
 link.addEventListener('click', () => {
-    menu.classList.add('hidden');
-    menu.classList.remove('flex', 'flex-col', 'absolute', 'top-full', 'right-0', 'bg-white', 'shadow-md', 'py-2', 'mobile-menu');
+menu.classList.add('hidden');
+menu.classList.remove('flex', 'flex-col', 'absolute', 'top-full', 'right-0', 'bg-white', 'shadow-md', 'py-2', 'mobile-menu');
 });
 });
 </script>
