--- a/index.htm
+++ b/index.htm
@@ -97,7 +97,8 @@ y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
 <nav class="container mx-auto px-6 h-16 flex items-center justify-between">
 <a href="#hero" class="text-xl font-bold text-gray-800">
 <span id="header-name" class="hidden">
-<span class="font-bold">Kevin Middleton</span> | <span class="font-normal">Full Stack Product Manager</span>
+<span class="block">Kevin Middleton</span>
+<span class="block text-sm font-normal">Full Stack Product Manager</span>
 </span>
 </a>
 <div class="md:hidden">
@@ -197,7 +198,7 @@ HVAC.COM
 <div class="grid grid-cols-2 md:grid-cols-4 gap-4 mt-4">
 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Calculators-ugatTWPQjMXKJgaVhpaFvInZcvUTnG.png" alt="HVAC.COM Calculators" class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/QuoteScore%20Landing%20Page-uuM6LcirnsW3dgC9uZ7IvQCkaH4o6t.png" alt="HVAC.COM QuoteScore Landing Page" class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
-<img    src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/video-CMzSXsw2YKljtBUuFMmwnpd5Vmbk7s.png" alt="HVAC.COM Video Content" class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
+<img        src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/video-CMzSXsw2YKljtBUuFMmwnpd5Vmbk7s.png" alt="HVAC.COM Video Content" class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Replace%20Landing%20Page-3KAGV2Ct1GLuZUDCvnSCoy2zNnGaxf.png" alt="HVAC.COM Replace Landing Page" class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
 </div>
 </div>
@@ -882,7 +883,7 @@ menu.classList.toggle('right-0');
 menu.classList.toggle('shadow-md');
 menu.classList.toggle('py-2');
 menu.classList.toggle('mobile-menu');
- });
+});
 
 // Close mobile menu when clicking outside
 document.addEventListener('click', (e) => {
