--- a/index.htm
+++ b/index.htm
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="overflow-x-hidden">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
 <title>Kevin Middleton - Full Stack Product Manager</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <style>
-body {
-    font-family: 'Inter', sans-serif;
-    overflow-x: hidden;
-  }
 html, body {
     width: 100%;
+    overflow-x: hidden;
     position: relative;
+    touch-action: pan-y;
+    -webkit-overflow-scrolling: touch;
+}
+body {
+    font-family: 'Inter', sans-serif;
+    min-height: 100vh;
+    min-height: -webkit-fill-available;
 }
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Inter', sans-serif;
-  }
+}
 .location {
     font-size: 0.9em;
     color: #e6f7ff;
     margin-top: 5px;
-  }
+}
 .gradient-bg-1 { background: linear-gradient(to bottom, #00a8ff, #205aff); }
 .gradient-bg-2 { background: linear-gradient(to bottom, #205aff, #4021ff); }
 .gradient-bg-3 { background: linear-gradient(to bottom, #4021ff, #5e00ff); }
@@ -34,49 +38,54 @@ h1, h2, h3, h4, h5, h6 {
 .gradient-bg-10 { background: linear-gradient(to bottom, #ff1c7f, #ff3e4d); }
 .gradient-bg-11 { background: linear-gradient(to bottom, #ff3e4d, #ff6533); }
 .project-card {
-transition: transform 0.3s ease-in-out;
+    transition: transform 0.3s ease-in-out;
 }
 .project-card:hover {
-   transform: scale(1.05);
-   transition: transform 0.5s ease-in-out;  /* Adjust duration and easing */
+    transform: scale(1.05);
+    transition: transform 0.5s ease-in-out;
 }
 .lightbox {
-display: none;
-position: fixed;
-z-index: 999;
-top: 0;
-left: 0;
-right: 0;
-bottom: 0;
-background: rgba(0,0,0,0.8);
-justify-content: center;
-align-items: center;
+    display: none;
+    position: fixed;
+    z-index: 999;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0,0,0,0.8);
+    justify-content: center;
+    align-items: center;
 }
 .lightbox-content {
-max-width: 90%;
-max-height: 90%;
+    max-width: 90%;
+    max-height: 90%;
 }
 .lightbox-content img {
-max-width: 100%;
-max-height: 90vh;
-object-fit: contain;
+    max-width: 100%;
+    max-height: 90vh;
+    object-fit: contain;
 }
 .close-lightbox {
-position: absolute;
-top: 20px;
-right: 20px;
-color: #fff;
-font-size: 30px;
-cursor: pointer;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    color: #fff;
+    font-size: 30px;
+    cursor: pointer;
 }
 .mobile-menu {
-   text-align: right;
-   width: auto;
-   max-width: 90vw;
-   padding-right: 1rem;
-   padding-left: 1rem;
-   background-color: rgba(255, 255, 255, 0.9);
-   backdrop-filter: blur(5px);
+    text-align: right;
+    width: auto;
+    max-width: 90vw;
+    padding-right: 1rem;
+    padding-left: 1rem;
+    background-color: rgba(255, 255, 255, 0.9);
+    backdrop-filter: blur(5px);
+}
+.container {
+    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 </style>
 <!-- Favicon -->
@@ -97,7 +106,7 @@ y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
 })(window, document, "clarity", "script", "kix9xdfw7p");
 </script>
 </head>
-<body class="min-h-screen">
+<body class="min-h-screen overflow-x-hidden">
 <header class="fixed top-0 left-0 right-0 bg-white bg-opacity-90 shadow-md z-50">
 <nav class="container mx-auto px-6 h-16 flex items-center justify-between">
 <a href="#hero" class="text-xl font-bold text-gray-800">
@@ -123,7 +132,7 @@ y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
 </ul>
 </nav>
 </header>
-<main class="pt-16"> <!-- Added padding-top to account for fixed header -->
+<main class="pt-16 overflow-x-hidden"> <!-- Added overflow-x-hidden -->
 <section id="hero" class="min-h-screen flex flex-col items-center justify-start pt-16 md:justify-center relative gradient-bg-1">
    <div class="text-center mb-8 md:mb-12">
        <h1 class="text-4xl font-bold text-white mb-2">Kevin Middleton</h1>
@@ -201,9 +210,9 @@ HVAC.COM
 <li><span class="font-semibold">Landing Pages:</span> Optimized landing pages to achieve a <strong>2.3% conversion rate</strong> to paid products.</li>
 </ul>
 <div class="grid grid-cols-2 md:grid-cols-4 gap-4 mt-4">
-<img  src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Calculators-ugatTWPQjMXKJgaVhpaFvInZcvUTnG.png" alt="HVAC.COM Calculators" class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
+<img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Calculators-ugatTWPQjMXKJgaVhpaFvInZcvUTnG.png"   alt="HVAC.COM Calculators" class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/QuoteScore%20Landing%20Page-uuM6LcirnsW3dgC9uZ7IvQCkaH4o6t.png" alt="HVAC.COM QuoteScore Landing Page" class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
-<img        src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/video-CMzSXsw2YKljtBUuFMmwnpd5Vmbk7s.png" alt="HVAC.COM Video Content" class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
+<img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/video-CMzSXsw2YKljtBUuFMmwnpd5Vmbk7s.png" alt="HVAC.COM Video Content" class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Replace%20Landing%20Page-3KAGV2Ct1GLuZUDCvnSCoy2zNnGaxf.png" alt="HVAC.COM Replace Landing Page" class="rounded-md cursor-pointer object-cover w-full h-48 lightbox-trigger">
 </div>
 </div>
@@ -403,7 +412,7 @@ ORACLE
 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Rocket%20Lawyer-rp4YsC8U09zO3ssfG9J781arqsI8gY.png" alt="Rocket Lawyer logo" class="w-full h-48 object-cover">
 <a href="https://middleton.io/rocketlawyer/" target="_blank" rel="noopener noreferrer" class="block p-6">
 <h3 class="text-xl font-bold mb-2 text-gray-800">Co-Branded Partner Sites</h3>
-<p class="text-gray-600 mb-4">Led the creation and launch of co-branded partner sites for Rocket Lawyer, integrating OpenID Connect authentication with customizable pricing, content, and features. This project accounte d for <strong>16% of European traffic</strong> and opened a new revenue channel.</p>
+<p class="text-gray-600 mb-4">Led the creation and launch of co-branded partner sites for Rocket Lawyer, integrating OpenID Connect authentication with customizable pricing, content, and features. This project accounted for <strong>16% of European traffic</strong> and opened a new revenue channel.</p>
 <div class="flex flex-wrap">
 <span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">Growth</span>
 <span class="bg-gray-200 text-gray-700 px-2 py-1 rounded-full text-sm mr-2 mb-2">Partnerships</span>
@@ -894,7 +903,7 @@ menu.classList.toggle('mobile-menu');
 document.addEventListener('click', (e) => {
 if (!menu.contains(e.target) && !menuToggle.contains(e.target)) {
 menu.classList.add('hidden');
-menu.classList.remove('flex', 'flex-col', 'absolute', 'top-full', 'right-0', 'bg-white', 'shadow-md', 'py-2', 'mobile-menu');
+menu.classList.remove('flex', 'flex-col', 'absolute', 'top-full', 'right-0', 'bg-white', 'shadow-md', 'py-2',  'mobile-menu');
 }
 });
 
